syntax = "proto3";

package greet ;

option go_package = "github/vikashparashar/gRPC_Tutorials/greet/proto";
message GreetRequest{
    string name = 1;
}
message GreetResponse{
    string result = 1;
}
service GreetService{
    rpc Single_Greet (GreetRequest) returns (GreetResponse);
    rpc Greet_Many_Times (GreetRequest) returns (stream GreetResponse);
    rpc Long_Greet (stream GreetRequest) returns (GreetResponse);
    rpc Greet_Every_One (stream GreetRequest) returns (stream GreetResponse);
}

// protoc -Igreet/proto --go_opt=module=github/vikashparashar/gRPC_Tutorials/greet/proto --go_out=greet/proto/. --go-grpc_opt=module=github/vikashparashar/gRPC_Tutorials/greet/proto --go-grpc_out=greet/proto/. greet/proto/greet.proto
